# webapp-shop

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
app/: auth.py  initializer.py  main.py  schema.py
app/bot/: commands.py  dispatcher.py
app/config/: config.py
app/models/: __init__.py  base.py  errors.py  order.py  product.py  shop.py  user.py
app/services/: auth.py
app/utils/: check_web_app.py  format_order.py  get_or_404.py  strawberry_from_orm.py  translation.py
commands/: set_webhooks.py
migrations/models/: 0_20220629174854_init.sql  1_20220629174931_update.sql  2_20220629184937_update.sql  3_20220629200656_update.sql  4_20220701145754_update.sql  4_20220701165544_update.sql  5_20220703003223_update.sql  6_20220703005732_update.sql  7_20220705145509_update.sql  9_20220709133106_update.sql
static/admin/: index.html
static/web/: index.html
templates/: base.html:Zone.Identifier  dashboard.html
web/: index.html
web/css/: app.188005f0.css  app.2e60e44d.css  app.84f4add5.css  app.94dac49b.css  chunk-vendors.81fbbb99.css
web/js/: app-legacy.1a6f96c3.js  app-legacy.1a6f96c3.js.map  app-legacy.2313303b.js  app-legacy.2313303b.js.map  app-legacy.231e3d97.js  app-legacy.231e3d97.js.map  app-legacy.2a84d3b6.js  app-legacy.2a84d3b6.js.map  app-legacy.2eeba1be.js  app-legacy.2eeba1be.js.map  app-legacy.31ae02c8.js  app-legacy.31ae02c8.js.map  app-legacy.37e2a19c.js  app-legacy.37e2a19c.js.map  app-legacy.3831f824.js  app-legacy.3831f824.js.map  app-legacy.3959f35f.js  app-legacy.3959f35f.js.map  app-legacy.3e310b49.js  (+134 more)
(+76 files in other folders)
