[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[project]
name = "webapp-api"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aerich==0.6.3",
    "aiogram==3.0.0b3",
    "environs==9.5.0",
    "fastapi==0.78.0",
    "strawberry-graphql==0.114.5",
    "tortoise-orm==0.19.1",
    "uvicorn==0.17.6",
]

[project.scripts]
api = "app.main:run"

[tool.aerich]
tortoise_orm = "app.config.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
